<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_keys"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_bottom_line"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_symbols"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layout_keyboard"
            android:orientation="horizontal">

            <TextView
                style="@style/StyleSymbols"
                android:id="@+id/tv_modulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/modulo" />

            <TextView
                android:id="@+id/sqrt"
                style="@style/StyleSymbols"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sqrt" />

            <TextView
                android:id="@+id/square"
                style="@style/StyleSymbols"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/square" />

            <TextView
                style="@style/StyleSymbols"
                android:id="@+id/tv_one_x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/onex" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_keyboard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:background="@color/bg_keyboard"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/StyleSymbols"
                    android:id="@+id/tv_clear_all"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="CE" />

                <TextView
                    android:id="@+id/clear"
                    style="@style/StyleSymbols"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/clear" />

                <TextView
                    android:id="@+id/backSpace"
                    style="@style/StyleSymbols"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/backspace" />


                <TextView
                    android:id="@+id/divide"
                    style="@style/StyleSymbols"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/pad10"
                    android:text="@string/divide"
                    android:textSize="28sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/num7"
                    style="@style/StyleButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/seven" />


                <TextView
                    android:id="@+id/num8"
                    style="@style/StyleButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/eight" />

                <TextView
                    android:id="@+id/num9"
                    style="@style/StyleButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nine" />

                <TextView
                    android:id="@+id/multiply"
                    style="@style/StyleSymbols"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/multiply" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/num4"
                    style="@style/StyleButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/four" />


                <TextView
                    android:id="@+id/num5"
                    style="@style/StyleButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/five" />

                <TextView
                    android:id="@+id/num6"
                    style="@style/StyleButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/six" />

                <TextView
                    android:id="@+id/minus"
                    style="@style/StyleSymbols"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/subtract" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/num1"
                    style="@style/StyleButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/one" />

                <TextView
                    android:id="@+id/num2"
                    style="@style/StyleButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/two" />

                <TextView
                    android:id="@+id/num3"
                    style="@style/StyleButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/three" />

                <TextView
                    android:id="@+id/plus"
                    style="@style/StyleSymbols"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:paddingBottom="@dimen/pad5">

                <TextView
                    android:id="@+id/posneg"
                    style="@style/StyleSymbols"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/pad10"
                    android:text="@string/posneg"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/num0"
                    style="@style/StyleButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/zero" />

                <TextView
                    android:id="@+id/dot"
                    style="@style/StyleButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dot" />

                <TextView
                    android:id="@+id/equal"
                    style="@style/StyleSymbols"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/equal" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>