<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="7">

            <RelativeLayout
                android:id="@+id/layout_cal_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/pad5">

                <ImageView
                    android:id="@+id/iv_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/ic_chevron_left_black_24dp"
                    android:visibility="gone" />

                <HorizontalScrollView
                    android:id="@+id/horizontal_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/iv_left"
                    android:layout_toLeftOf="@+id/iv_right"
                    android:layout_toRightOf="@+id/iv_left"
                    android:layout_toStartOf="@+id/iv_right"
                    android:scrollbars="none">

                    <TextView
                        android:id="@+id/et_recent_cal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:maxLines="1"
                        android:padding="@dimen/pad5"
                        android:scrollHorizontally="true"
                        android:textSize="@dimen/font18" />
                </HorizontalScrollView>

                <ImageView
                    android:id="@+id/iv_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:padding="5dp"
                    android:src="@drawable/ic_chevron_right_black_24dp"
                    android:visibility="gone" />


            </RelativeLayout>

            <me.grantland.widget.AutofitTextView
                android:id="@+id/et_user_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/layout_memory_buttons"
                android:gravity="end"
                android:maxLines="1"
                android:padding="10dp"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black"
                android:textSize="44sp"
                autofit:minTextSize="30sp" />

            <LinearLayout
                android:id="@+id/layout_memory_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/btn_mc"
                    style="@style/StyleMemoryButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/mc" />

                <TextView
                    android:id="@+id/btn_mr"
                    style="@style/StyleMemoryButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/mr" />

                <TextView
                    android:id="@+id/btn_mplus"
                    style="@style/StyleMemoryButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/mplus" />

                <TextView
                    android:id="@+id/btn_msub"
                    style="@style/StyleMemoryButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/msub" />

                <TextView
                    android:id="@+id/btn_ms"
                    style="@style/StyleMemoryButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/ms" />

                <TextView
                    android:id="@+id/btn_m"
                    style="@style/StyleMemoryButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/m" />
            </LinearLayout>

        </RelativeLayout>

        <FrameLayout
            android:id="@+id/fl_key_holder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3" />
    </LinearLayout>

</RelativeLayout>